# E1

./: README.md  pyproject.toml
cookbook/: basic.ipynb
src/E1/: batch_preparer.py  msa_sampling.py
